skip indices which require sorting for distinct SERVER-2135